--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -71,8 +71,8 @@ post_class: post-template
                     <!-- Author Name -->
                     <h4> {{ site.author }} </h4>
                     <!-- Author Bio -->
-                    <p> 
-                        Here goes the author description. You might want to place some links too in here
+                    <p>
+		      Aficionado por programação, entusiasta de Linux, Software Livre e Código Aberto.
                     </p>
                 </section>                
             {% endif %}
